# d-company-erp

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  COMPANY_COMPLIANCE_CHECKLIST.md  D_Company_Legal_Documents_Checklist.docx  D_Company_Legal_Documents_Checklist_Nilambur_Kerala.docx  HANDOFF.md  Install D Company ERP (Mac).command  LEGAL_DOCUMENTS_CHECKLIST.md  PROJECT_STATE.md  QUICKSTART_DO.md  QUICKSTART_FREE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_india_compliance.py  0003_events.py  0004_integrations.py  0005_customers_memberships_kds.py  0006_index_orders_opened_at.py  0007_normalize_kerala_branch_state.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/accounting/: router.py
backend/app/api/v1/admin/: router.py
backend/app/api/v1/analytics/: router.py
backend/app/api/v1/auth/: router.py
backend/app/api/v1/customers/: router.py
backend/app/core/: audit.py  config.py  db.py  errors.py  idempotency.py  logging.py  middleware.py  money.py  permissions.py  pricing_lock.py  roles.py  security.py  tenant.py
backend/app/events/: __init__.py  bus.py  events.py
backend/app/models/: __init__.py  audit.py  base.py  customer.py  events.py  finance.py  gaming.py  idempotency_key.py  india.py  inventory.py  membership.py  menu.py  ocr.py  pos.py  tables.py  tenant.py  user.py
backend/app/services/alerts/: __init__.py  business.py
backend/app/services/audit/: recorder.py
backend/app/services/email/: mailer.py
backend/app/services/integrations/: google_sheets.py
backend/app/services/inventory/: deduction.py
backend/app/services/pos/: pricing.py
backend/app/services/reports/: __init__.py  aggregator.py
backend/app/workers/: daily_pnl.py  pnl_alerts.py
backend/scripts/: create_user.py  ensure_service_catalog.py  seed.py  seed_india.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_security.py  test_health.py
backend/tests/unit/: test_money.py  test_permissions.py  test_pnl_alerts_worker.py  test_pricing.py  test_roles.py
docs/: ARCHITECTURE.md  (+17 more)
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: README.md
frontend/src-tauri/src/: lib.rs  main.rs
(+106 files in other folders)
