[project]
name = "d-company-erp-backend"
version = "1.0.0"
description = "D Company ERP — backend (FastAPI, SQLAlchemy, PostgreSQL)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0.27",
  "greenlet>=3.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1.18",
  "asyncpg>=0.29",
  "passlib[argon2]>=1.7.4",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "arq>=0.25",
  "boto3>=1.34",
  "httpx>=0.27",
  "structlog>=24.1",
  "orjson>=3.9",
  "tenacity>=8.2",
  "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "httpx>=0.27",
  "ruff>=0.3",
  "mypy>=1.9",
  "types-passlib",
  "freezegun>=1.4",
  "factory-boy>=3.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "PT", "SIM", "TCH"]
ignore = ["S101"]  # assert in tests is fine

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
markers = [
  "integration: tests that hit a real database",
  "slow: tests longer than ~1s",
]

[tool.setuptools.packages.find]
include = ["app*"]
